Change log for hexer, the multi-view binary editor

0.1.5
	- taken over by Peter Pentchev <roam@ringlet.net>
	- remove the "bdir" and "ef" settings from the Vim modelines to
	  make them actually acceptable to today's Vim
	- add a config.posix file to reflect a modern POSIX-like system
	- bring config.linux up to date
	- add a HAVE_STRERROR definition to the config files and roll out
	  our own strerror() function if needed
	- clean up the header files:
	  - remove "extern" before the function prototypes
	- clean up the Makefile:
	  - allow the user to override most of the variables
	  - no need to ignore the result of "rm -f" :)
	  - use CFLAGS when building bin2c
	- rename the KEY_* constants to HXKEY_* to avoid conflicts with
	  the curses header files

0.1.4c
	- the last version released by Sascha Demetrio <demetrio@cs.uni-sb.de>